--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,9 +1,49 @@
 header {
+  position: relative;
   background: linear-gradient(228.57deg, #323264 11.93%, #323264 57.17%, #643E72 87.46%);
+  border-bottom-right-radius: 12px;
+  border-bottom-left-radius: 12px;
+  margin-bottom: 100px;
 }
 
+header:before {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 1.5%;
+  width: 97%;
+  height: 10px;
+  margin: 0 auto;
+  border-bottom-right-radius: 12px;
+  border-bottom-left-radius: 12px;
+  background: #CACADB;
+}
+
+header:after {
+  content: "";
+  position: absolute;
+  top: 100.5%;
+  left: 3.5%;
+  width: 93%;
+  height: 10px;
+  margin: 0 auto;
+  border-bottom-right-radius: 12px;
+  border-bottom-left-radius: 12px;
+  background: #E7E7F2;
+}
+
+
 .header {
+  &-image {
+    position: absolute;
+    top: 400px;
+    left:50%;
+    transform:translate(-50%, -50%);
+    z-index: 1;
+  }
   &__navigation {
+    padding-top: 50px;
+
     .navigation-contacts {
       display: flex;
       justify-content: space-between;
@@ -14,6 +54,7 @@ header {
         display: flex;
         gap: 6px;
         align-items: center;
+        z-index: 2;
 
         .language {
           text-transform: uppercase;
@@ -65,22 +106,123 @@ header {
       }
     }
 
-    .navigation-list .navigation-items {
+    .navigation-list {
+      display: flex;
+      justify-content: flex-end;
+    }
+    .navigation-items {
       list-style: none;
       display: flex;
       flex-direction: row;
       justify-content: flex-end;
       gap: 15px;
+      margin: 0;
       font-weight: 700;
       line-height: 20px;
+      z-index: 2;
 
       .navigation-item a:hover {
         color: #F0145A;
         text-decoration: underline;
       }
+
       .navigation-item a:visited {
         color: #24A3FF;
       }
+    }
+  }
+
+  &__hero {
+    display: flex;
+    flex-direction: column;
+
+    &-title {
+      z-index: 2;
+      align-self: center;
+      padding-top: 200px;
+      margin-bottom: 305px;
+      color: #fff;
+    }
+
+    &-arrow {
+      align-self: center;
+      border: 2px solid #fff;
+      border-radius: 50%;
+      width: 42px;
+      height: 42px;
+      padding: 10px 0 6px 16px;
+      margin-bottom: 100px;
+      z-index: 2;
+
+      i {
+        border: solid #fff;
+        border-width: 0 3px 3px 0;
+        display: inline-block;
+        padding: 11px;
+        transform: rotate(45deg);
+      }
+    }
+
+      &-offer {
+      display: flex;
+      align-items: center;
+      margin: 0 180px;
+      color: #B3B3BA;
+
+      .offer-items {
+        list-style: none;
+        text-align: end;
+        font-weight: 700;
+        font-size: 38px;
+        line-height: 1.2;
+        white-space: nowrap;
+
+        .offer-item {
+          margin-bottom: 30px;
+        }
+
+        .offer-item:first-child {
+          background: linear-gradient(90.13deg, #F0145A 0.84%, #EF8080 99.96%);
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
+        }
+      }
+
+      span {
+        width: 4px;
+        height: 300px;
+        background: rgba(255, 255, 255, 0.3);
+        margin: 0 60px;
+      }
+
+      .offer-desc {
+
+      }
+    }
+  }
+
+  &__cards-title {
+    margin: 10px 0 0;
+  }
+
+  &__cards {
+    display: flex;
+    flex-direction: column;
+
+    &-items {
+      display: grid;
+      grid: 1fr 1fr / repeat(3, 1fr);
+      gap: 60px;
+      margin: 60px 0;
+      color: #fff;
+
+      .cards-item-subtitle h3 {
+        margin: 30px 0 15px;
+        font-weight: 700;
+        font-size: 22px;
+        color: #24A3FF;
+      }
+
     }
   }
 }
