--- a/sass/style.css
+++ b/sass/style.css
@@ -15,10 +15,71 @@ body a {
   padding-left: 60px;
 }
 
-header {
-  background: linear-gradient(228.57deg, #323264 11.93%, #323264 57.17%, #643E72 87.46%);
+.link-arrow {
+  font-weight: 700;
+  font-size: 14px;
+  color: #24A3FF;
+}
+.link-arrow .arrow {
+  border: solid #24A3FF;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+}
+.link-arrow .right {
+  transform: rotate(-45deg);
 }
 
+.gradient-title {
+  background: linear-gradient(90.13deg, #F0145A 0.84%, #EF8080 99.96%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+header {
+  position: relative;
+  background: linear-gradient(228.57deg, #323264 11.93%, #323264 57.17%, #643E72 87.46%);
+  border-bottom-right-radius: 12px;
+  border-bottom-left-radius: 12px;
+  margin-bottom: 100px;
+}
+
+header:before {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 1.5%;
+  width: 97%;
+  height: 10px;
+  margin: 0 auto;
+  border-bottom-right-radius: 12px;
+  border-bottom-left-radius: 12px;
+  background: #CACADB;
+}
+
+header:after {
+  content: "";
+  position: absolute;
+  top: 100.5%;
+  left: 3.5%;
+  width: 93%;
+  height: 10px;
+  margin: 0 auto;
+  border-bottom-right-radius: 12px;
+  border-bottom-left-radius: 12px;
+  background: #E7E7F2;
+}
+
+.header-image {
+  position: absolute;
+  top: 400px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+}
+.header__navigation {
+  padding-top: 50px;
+}
 .header__navigation .navigation-contacts {
   display: flex;
   justify-content: space-between;
@@ -29,6 +90,7 @@ header {
   display: flex;
   gap: 6px;
   align-items: center;
+  z-index: 2;
 }
 .header__navigation .navigation-contacts-info .language {
   text-transform: uppercase;
@@ -72,20 +134,102 @@ header {
   border-radius: 50%;
   background: #E6E6F0;
 }
-.header__navigation .navigation-list .navigation-items {
+.header__navigation .navigation-list {
+  display: flex;
+  justify-content: flex-end;
+}
+.header__navigation .navigation-items {
   list-style: none;
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
   gap: 15px;
+  margin: 0;
   font-weight: 700;
   line-height: 20px;
+  z-index: 2;
 }
-.header__navigation .navigation-list .navigation-items .navigation-item a:hover {
+.header__navigation .navigation-items .navigation-item a:hover {
   color: #F0145A;
   text-decoration: underline;
 }
-.header__navigation .navigation-list .navigation-items .navigation-item a:visited {
+.header__navigation .navigation-items .navigation-item a:visited {
+  color: #24A3FF;
+}
+.header__hero {
+  display: flex;
+  flex-direction: column;
+}
+.header__hero-title {
+  z-index: 2;
+  align-self: center;
+  padding-top: 200px;
+  margin-bottom: 305px;
+  color: #fff;
+}
+.header__hero-arrow {
+  align-self: center;
+  border: 2px solid #fff;
+  border-radius: 50%;
+  width: 42px;
+  height: 42px;
+  padding: 10px 0 6px 16px;
+  margin-bottom: 100px;
+  z-index: 2;
+}
+.header__hero-arrow i {
+  border: solid #fff;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 11px;
+  transform: rotate(45deg);
+}
+.header__hero-offer {
+  display: flex;
+  align-items: center;
+  margin: 0 180px;
+  color: #B3B3BA;
+}
+.header__hero-offer .offer-items {
+  list-style: none;
+  text-align: end;
+  font-weight: 700;
+  font-size: 38px;
+  line-height: 1.2;
+  white-space: nowrap;
+}
+.header__hero-offer .offer-items .offer-item {
+  margin-bottom: 30px;
+}
+.header__hero-offer .offer-items .offer-item:first-child {
+  background: linear-gradient(90.13deg, #F0145A 0.84%, #EF8080 99.96%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.header__hero-offer span {
+  width: 4px;
+  height: 300px;
+  background: rgba(255, 255, 255, 0.3);
+  margin: 0 60px;
+}
+.header__cards-title {
+  margin: 10px 0 0;
+}
+.header__cards {
+  display: flex;
+  flex-direction: column;
+}
+.header__cards-items {
+  display: grid;
+  grid: 1fr 1fr/repeat(3, 1fr);
+  gap: 60px;
+  margin: 60px 0;
+  color: #fff;
+}
+.header__cards-items .cards-item-subtitle h3 {
+  margin: 30px 0 15px;
+  font-weight: 700;
+  font-size: 22px;
   color: #24A3FF;
 }
 
