--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -3,7 +3,7 @@ header {
   background: linear-gradient(228.57deg, #323264 11.93%, #323264 57.17%, #643E72 87.46%);
   border-bottom-right-radius: 12px;
   border-bottom-left-radius: 12px;
-  margin-bottom: 100px;
+  margin-bottom: 60px;
 }
 
 header:before {
@@ -32,15 +32,9 @@ header:after {
   background: #E7E7F2;
 }
 
+//============================================================================= header_navigation
 
 .header {
-  &-image {
-    position: absolute;
-    top: 400px;
-    left:50%;
-    transform:translate(-50%, -50%);
-    z-index: 1;
-  }
   &__navigation {
     padding-top: 50px;
 
@@ -69,6 +63,7 @@ header:after {
           background: #F0145A;
           border-radius: 8px;
           padding: 5px 7px;
+          opacity: 1;
         }
 
         .info-address {
@@ -110,6 +105,7 @@ header:after {
       display: flex;
       justify-content: flex-end;
     }
+
     .navigation-items {
       list-style: none;
       display: flex;
@@ -124,6 +120,7 @@ header:after {
       .navigation-item a:hover {
         color: #F0145A;
         text-decoration: underline;
+        opacity: 1;
       }
 
       .navigation-item a:visited {
@@ -131,7 +128,23 @@ header:after {
       }
     }
   }
+}
 
+//============================================================================= header_image
+
+.header {
+  &-image {
+    position: absolute;
+    top: 400px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+  }
+}
+
+//============================================================================= header_hero
+
+.header {
   &__hero {
     display: flex;
     flex-direction: column;
@@ -163,7 +176,7 @@ header:after {
       }
     }
 
-      &-offer {
+    &-offer {
       display: flex;
       align-items: center;
       margin: 0 180px;
@@ -200,11 +213,19 @@ header:after {
       }
     }
   }
+}
 
+//============================================================================= header_cards_title
+
+.header {
   &__cards-title {
     margin: 10px 0 0;
   }
+}
 
+//============================================================================= header_cards
+
+.header {
   &__cards {
     display: flex;
     flex-direction: column;
@@ -222,7 +243,7 @@ header:after {
         font-size: 22px;
         color: #24A3FF;
       }
-
     }
   }
 }
+
