Add svg in header main and footer for desktop version

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -159,21 +159,15 @@ header:after {
 
     &-arrow {
       align-self: center;
-      border: 2px solid #fff;
-      border-radius: 50%;
       width: 42px;
       height: 42px;
-      padding: 10px 0 6px 16px;
-      margin-bottom: 100px;
       z-index: 2;
+      background: url("/img/scroll_sprites.png") -72px -10px;
+    }
 
-      i {
-        border: solid #fff;
-        border-width: 0 3px 3px 0;
-        display: inline-block;
-        padding: 11px;
-        transform: rotate(45deg);
-      }
+    &-arrow:hover {
+      background: url("/img/scroll_sprites.png") -10px -10px;
+      opacity: 1;
     }
 
     &-offer {
@@ -236,6 +230,17 @@ header:after {
       gap: 60px;
       margin: 60px 0;
       color: #fff;
+
+      .cards-item-img {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 92px;
+        height: 92px;
+        background: #fff;
+        border-radius: 24px;
+        padding: 14px;
+      }
 
       .cards-item-subtitle h3 {
         margin: 30px 0 15px;
