--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -10,10 +10,6 @@ body {
     text-decoration: none;
     color: #fff;
   }
-
-  a:hover {
-    opacity: 0.7;
-  }
 }
 
 .center {
@@ -41,8 +37,13 @@ body {
 }
 
 .link-arrow:hover {
-  opacity: 0.7;
+  color: #F0145A;
+
+  i {
+    border-color: #F0145A;
+  }
 }
+
 
 .gradient-title {
   background: linear-gradient(90.13deg, #F0145A 0.84%, #EF8080 99.96%);
@@ -50,6 +51,122 @@ body {
   -webkit-text-fill-color: transparent;
 }
 
-.facebook:hover {
-  opacity: 0.7;
+
+@media screen and (min-width: 1920px) {
+  .center {
+    padding-right: 160px;
+    padding-left: 160px;
+  }
+
+  .main_partners-grid {
+    padding-left: 100px;
+    padding-right: 100px;
+
+    .grid-logo:nth-child(1) {
+      border-top-left-radius: 12px;
+    }
+
+    .grid-logo:nth-child(4) {
+      border-top-right-radius: 12px;
+    }
+
+    .grid-logo:nth-child(9) {
+      border-bottom-left-radius: 12px;
+    }
+
+    .grid-logo:nth-child(12) {
+      border-bottom-right-radius: 12px;;
+    }
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .center {
+    padding-right: 60px;
+    padding-left: 60px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .center {
+    padding-right: 60px;
+    padding-left: 60px;
+  }
+
+  .header__hero-offer {
+    flex-direction: column;
+  }
+
+  .header__hero-offer .offer-line {
+    width: 100%;
+    height: 4px;
+    background: rgba(255, 255, 255, 0.3);
+    margin: 22px 0 35px;
+  }
+
+  .offer-items {
+    display: flex;
+    gap: 30px;
+    width: 100%;
+    overflow: hidden;
+  }
+
+  .header .header__cards-items {
+    grid: 1fr 1fr 1fr/ repeat(2, 1fr);
+  }
+
+  .main .slide {
+    flex-direction: column;
+
+    .slide-img {
+      min-height: 500px;
+    }
+  }
+  .main__partners .main_partners-grid {
+    grid: repeat(4, 1fr) / repeat(3, 33.333%);
+    margin-bottom: 0;
+  }
+  body .main .main__publications {
+    padding-top: 30px;
+
+    .main__publications-cards {
+      flex-wrap: wrap;
+    }
+  }
+  .main .main__publications-cards {
+    grid: 1fr /1fr 1fr;
+    padding: 0;
+  }
+  body .main .main__publications-cards .publications-card:last-of-type {
+    grid-column: span 2;
+  }
+
+  .header__navigation {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+
+    .navigation-contacts {
+      display: flex;
+      flex-direction: column;
+
+      .navigation-contacts-logo {
+        order: 2;
+        margin: 30px 0 30px;
+      }
+
+      .navigation-contacts-info {
+        order: 1;
+        padding: 0;
+      }
+    }
+  }
+  .header .header__navigation .navigation-list {
+    justify-content: flex-start;
+    margin: 0;
+
+    .navigation-items {
+      padding: 0;
+    }
+  }
 }
