--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -7,15 +7,22 @@
 
   .slide {
     display: flex;
-    gap: 30px;
     background: #F5F5FA;
     border-radius: 12px;
 
+    .slide-img {
+      min-width: 400px;
+      background-image: url(/img/team.png);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+    }
+
     .slide-desk {
-      margin: 30px 0;
+      margin: 30px;
 
       .slide-desk-title {
-        margin-top: 5px;
+        margin: 5px 30px 0 0;
       }
 
       .slide-desk-position {
@@ -67,8 +74,7 @@
 
 .main_partners-grid {
   display: grid;
-  grid-template-columns: repeat(4, 25%);
-  grid-template-rows: repeat(3, 1fr);
+  grid:  repeat(3, 1fr) / repeat(4, 25%);
   margin-bottom: 30px;
 
   .grid-logo {
@@ -127,18 +133,23 @@
 }
 
 //============================================================================= main_publications
+.main__publications {
+  background: #F5F5FA;
+}
+
 .main__publications-title {
   margin: 10px 0 30px;
 }
 
 .main__publications-cards {
-  display: flex;
+  display: grid;
+  grid: 1fr / repeat(3, 33%);
   gap: 30px;
-  width: 100%;
-  margin-bottom: 30px;
+  padding: 0 60px 30px 0;
 
   .publications-card {
-    width: 33%;
+    width: 100%;
+    background: #fff;
 
     .card-image img {
       object-fit: cover;
@@ -151,6 +162,10 @@
       font-weight: 700;
       color: #24a3ff;
       margin: 30px 0 15px;
+    }
+
+    .card-subtitle:hover {
+      color: #F0145A;
     }
 
     .card-date {
