--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -81,6 +81,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    min-height: 120px;
   }
 
   .grid-logo:nth-child(1) {
