--- a/sass/style.css
+++ b/sass/style.css
@@ -45,6 +45,19 @@ body a {
   -webkit-text-fill-color: transparent;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 @media screen and (min-width: 1920px) {
   .center {
     padding-right: 160px;
@@ -109,9 +122,6 @@ body a {
   body .main .main__publications {
     padding-top: 30px;
   }
-  body .main .main__publications .main__publications-cards {
-    flex-wrap: wrap;
-  }
   .main .main__publications-cards {
     grid: 1fr/1fr 1fr;
     padding: 0;
@@ -142,6 +152,209 @@ body a {
   }
   .header .header__navigation .navigation-list .navigation-items {
     padding: 0;
+  }
+}
+@media screen and (max-width: 375px) {
+  .header {
+    overflow: hidden;
+  }
+  .center {
+    padding-right: 30px;
+    padding-left: 30px;
+  }
+  .header .header__navigation {
+    padding-top: 0;
+    width: 100%;
+    margin: 0 -30px;
+  }
+  .header .header__navigation .navigation-contacts-info .info-address,
+  .header .header__navigation .navigation-contacts-info .facebook,
+  .header .header__navigation .navigation-contacts-info .info-tel:before,
+  .header .header__navigation .navigation-contacts-info .info-tel:after {
+    display: none;
+  }
+  .navigation-contacts {
+    padding: 0 15px;
+  }
+  .navigation-contacts .navigation-contacts-logo {
+    z-index: 2;
+  }
+  .navigation-contacts .navigation-contacts-logo .logo img {
+    width: 25%;
+  }
+  .navigation-contacts .navigation-contacts-info {
+    background: rgba(245, 245, 250, 0.2);
+    opacity: 80%;
+    height: 45px;
+    margin-left: -15px;
+    margin-right: -75px;
+  }
+  .navigation-contacts .navigation-contacts-info .language:first-child {
+    padding-left: 22px;
+  }
+  .navigation-contacts .navigation-contacts-info .info-tel {
+    padding-left: 100px;
+    padding-right: 10px;
+  }
+  .header .header__navigation .navigation-list .navigation-list-items {
+    position: fixed;
+    left: 3%;
+    top: 50%;
+    width: 94%;
+    height: 60%;
+    background: #fff;
+    display: none;
+    flex-direction: column;
+    gap: 30px;
+    align-items: center;
+    padding: 40px;
+    box-sizing: border-box;
+    border-radius: 12px;
+    z-index: 3;
+  }
+  .header .header__navigation .navigation-list .navigation-list-items .navigation-items {
+    padding: 20px 0 0 0;
+    margin: 0;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+  }
+  .header .header__navigation .navigation-list .navigation-list-items .navigation-items a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #F5F5FA;
+    width: 335px;
+    height: 43px;
+    border-radius: 12px;
+    text-align: center;
+    color: #24A3FF;
+    font-weight: 700;
+    font-size: 24px;
+  }
+  .header .header__navigation .navigation-list .navigation-list-items .navigation-items a:active {
+    background: #E6E6F0;
+  }
+  .header .header__navigation .navigation-list .navigation-list-items .navigation-items a:hover {
+    color: #F0145A;
+    text-decoration: none !important;
+  }
+  .header__toggler {
+    width: 18px;
+    height: 15px;
+    display: block;
+    position: relative;
+    z-index: 5;
+  }
+  .header__toggler span {
+    width: 100%;
+    height: 2px;
+    background: #fff;
+    display: block;
+    position: absolute;
+    left: 330px;
+    top: -60px;
+    transform: translateY(-50%);
+  }
+  .header__toggler span:nth-child(2) {
+    width: 18px;
+    top: -55px;
+    left: 339px;
+    transform: translate(-50%, -50%);
+  }
+  .header__toggler span:nth-child(3) {
+    top: -50px;
+  }
+  #nav-toggler:checked ~ .navigation-list-items {
+    display: flex;
+  }
+  #nav-toggler:checked ~ .navigation-list-items > ul > li > .selected {
+    color: #F0145A;
+  }
+  #nav-toggler:checked ~ .navigation-list-items > ul > li > a:hover {
+    background: #E6E6F0;
+  }
+  #nav-toggler:checked ~ .navigation-list-items > ul > li > a:active {
+    color: #24A3FF;
+  }
+  #nav-toggler:checked ~ .header__toggler span {
+    position: fixed;
+    top: 361px;
+    left: 335px;
+    width: 6%;
+    background: #EC6F5D;
+    z-index: 10;
+    transform: translate(-50%, -50%) rotate(225deg);
+  }
+  #nav-toggler:checked ~ .header__toggler span:nth-child(2) {
+    transform: translate(-50%, -50%) rotate(-225deg);
+    background: #EC6F5D;
+  }
+  .header__hero .header__hero-offer {
+    margin-bottom: 30px;
+  }
+  .offer-items {
+    width: 100%;
+    overflow-x: auto;
+  }
+  body .header .header__cards-items {
+    grid: repeat(6, 1fr)/1fr;
+  }
+  .main .main__slider .slide .slide-img {
+    min-width: 100%;
+  }
+  .slide-desk-title {
+    font-size: 30px;
+  }
+  .main .main_partners-grid {
+    grid: repeat(6, 1fr)/1fr;
+  }
+  .main .main_partners-grid .grid-logo:nth-child(n+7) {
+    display: none;
+  }
+  .main .main__publications .main__publications-cards {
+    grid: repeat(3, 1fr)/1fr;
+  }
+  .main .main__publications .main__publications-cards .publications-card:last-of-type {
+    grid-column: span 1;
+  }
+  .footer__line {
+    padding-top: 30px;
+  }
+  .footer .footer__contacts {
+    grid: repeat(3, 1fr)/1fr;
+  }
+  .footer .footer__contacts .footer__contacts-desc {
+    margin-bottom: 0;
+  }
+  .footer .footer__contacts .footer__contacts-desc .contacts-address {
+    gap: 10px;
+    margin-bottom: 0;
+  }
+  .footer .footer__contacts .footer__contacts-desc .contacts-address .on-map:before {
+    display: none;
+  }
+  .footer .footer__contacts .footer__contacts-tel {
+    grid-column: span 1;
+    margin-top: -30px;
+  }
+  .footer .footer__contacts .contacts-address {
+    flex-direction: column;
+  }
+  .footer .footer__contacts .contacts-tel {
+    flex-direction: column;
+    margin-bottom: 30px;
+  }
+  .footer .footer__contacts .contacts-tel .contact-tel:before {
+    display: none;
+  }
+  .footer .footer__contacts .contacts-tel .e-mail:before {
+    display: none;
+  }
+  .footer__contacts-copyrights {
+    order: 3;
   }
 }
 header {
@@ -195,6 +408,7 @@ header:after {
   z-index: 2;
 }
 .header__navigation .navigation-contacts-info .language {
+  box-sizing: border-box;
   text-transform: uppercase;
   margin-left: 7px;
   margin-right: 7px;
@@ -244,7 +458,10 @@ header:after {
   justify-content: flex-end;
   margin-top: -30px;
 }
-.header__navigation .navigation-items {
+.header__navigation .navigation-list .navigation-list-items {
+  z-index: 2;
+}
+.header__navigation .navigation-list .navigation-list-items .navigation-items {
   list-style: none;
   display: flex;
   flex-direction: row;
@@ -253,14 +470,13 @@ header:after {
   margin: 0;
   font-weight: 700;
   line-height: 20px;
-  z-index: 2;
 }
-.header__navigation .navigation-items .navigation-item a:hover {
+.header__navigation .navigation-list .navigation-list-items .navigation-items .navigation-item a:hover {
   text-decoration: underline;
   text-underline-offset: 6px;
   text-decoration-thickness: 2px;
 }
-.header__navigation .navigation-items .navigation-item a:active {
+.header__navigation .navigation-list .navigation-list-items .navigation-items .navigation-item a:active {
   color: #F0145A;
   text-decoration: underline;
 }
@@ -279,7 +495,7 @@ header:after {
 }
 .header__hero-title {
   z-index: 2;
-  align-self: center;
+  text-align: center;
   padding-top: 230px;
   margin-bottom: 305px;
   color: #fff;
@@ -442,6 +658,7 @@ header:after {
   display: flex;
   justify-content: center;
   align-items: center;
+  min-height: 120px;
 }
 .main_partners-grid .grid-logo:nth-child(1) {
   background: #1C4280;
